Renamed some Emit-Operators and fixed EmitFromPointCloud

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -187,6 +187,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\__ImageQuadEmitterOBSOLETE.cs" />
+    <Compile Include="Types\EmitPointClound.cs" />
+    <Compile Include="Types\EmitFromMesh.cs" />
     <Compile Include="Types\DepthOfField.cs" />
     <Compile Include="Types\SortPixelExample.cs" />
     <Compile Include="Types\TestImageFx.cs" />
@@ -251,7 +254,6 @@
     <Compile Include="Types\IntAdd.cs" />
     <Compile Include="Types\Invert.cs" />
     <Compile Include="Types\BoolToInt.cs" />
-    <Compile Include="Types\PointCloudEmitter.cs" />
     <Compile Include="Types\ScaleSize.cs" />
     <Compile Include="Types\Scene13.cs" />
     <Compile Include="Types\GetParticleSystem.cs" />
@@ -370,7 +372,6 @@
     <Compile Include="Types\OrthographicCamera.cs" />
     <Compile Include="Types\ShadowMapTransformsConstBuffer.cs" />
     <Compile Include="Types\Synchotron.cs" />
-    <Compile Include="Types\AddPointClound.cs" />
     <Compile Include="Types\LoadPointCloud.cs" />
     <Compile Include="Types\CurveTest.cs" />
     <Compile Include="Types\HexGridDisplace.cs" />
@@ -457,7 +458,6 @@
     <Compile Include="Types\String.cs" />
     <Compile Include="Types\TestGroup.cs" />
     <Compile Include="Types\Crash14ShaderUpdate.cs" />
-    <Compile Include="Types\ImageQuadEmitter.cs" />
     <Compile Include="Types\CurlNoise.cs" />
     <Compile Include="Types\Div.cs" />
     <Compile Include="Types\Pulsate.cs" />
