--- a/Operators.csproj
+++ b/Operators.csproj
@@ -187,6 +187,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\ParticleDofExample.cs" />
     <Compile Include="Types\__ImageQuadEmitterOBSOLETE.cs" />
     <Compile Include="Types\EmitPointClound.cs" />
     <Compile Include="Types\EmitFromMesh.cs" />
