--- a/Operators.csproj
+++ b/Operators.csproj
@@ -187,6 +187,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\ContextCBuffers.cs" />
+    <Compile Include="Types\SetFog.cs" />
+    <Compile Include="Types\AddDOF.cs" />
     <Compile Include="Types\ParticleDofExample.cs" />
     <Compile Include="Types\__ImageQuadEmitterOBSOLETE.cs" />
     <Compile Include="Types\EmitPointClound.cs" />
