--- a/Operators.csproj
+++ b/Operators.csproj
@@ -187,6 +187,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\SetPointLight.cs" />
     <Compile Include="Types\ContextCBuffers.cs" />
     <Compile Include="Types\SetFog.cs" />
     <Compile Include="Types\AddDOF.cs" />
