--- a/Operators.csproj
+++ b/Operators.csproj
@@ -187,6 +187,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\HasValueDecreased.cs" />
+    <Compile Include="Types\RemapColor.cs" />
+    <Compile Include="Types\UseFallbackBuffer.cs" />
+    <Compile Include="Types\CCA1.cs" />
+    <Compile Include="Types\ComputeShaderCourse.cs" />
     <Compile Include="Types\SetPointLight.cs" />
     <Compile Include="Types\ContextCBuffers.cs" />
     <Compile Include="Types\SetFog.cs" />
