--- a/Operators.csproj
+++ b/Operators.csproj
@@ -187,6 +187,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\IsIntEven.cs" />
+    <Compile Include="Types\SwapBuffers.cs" />
+    <Compile Include="Types\CountInt.cs" />
     <Compile Include="Types\HasValueDecreased.cs" />
     <Compile Include="Types\RemapColor.cs" />
     <Compile Include="Types\UseFallbackBuffer.cs" />
