--- a/Operators.csproj
+++ b/Operators.csproj
@@ -187,6 +187,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\CCA2.cs" />
     <Compile Include="Types\IsIntEven.cs" />
     <Compile Include="Types\SwapBuffers.cs" />
     <Compile Include="Types\CountInt.cs" />
