Added [GenerateMips] op

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -196,6 +196,7 @@
     <Compile Include="Types\UseFallbackBuffer.cs" />
     <Compile Include="Types\CCA1.cs" />
     <Compile Include="Types\ComputeShaderCourse.cs" />
+    <Compile Include="Types\GenerateMips.cs" />
     <Compile Include="Types\SetPointLight.cs" />
     <Compile Include="Types\ContextCBuffers.cs" />
     <Compile Include="Types\SetFog.cs" />
