--- a/Operators.csproj
+++ b/Operators.csproj
@@ -187,6 +187,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\CASim.cs" />
+    <Compile Include="Types\EdgeOfChaos1.cs" />
+    <Compile Include="Types\CCAPanic.cs" />
+    <Compile Include="Types\CCATestField.cs" />
     <Compile Include="Types\DOFTestScene.cs" />
     <Compile Include="Types\CCA2.cs" />
     <Compile Include="Types\IsIntEven.cs" />
