--- a/Operators.csproj
+++ b/Operators.csproj
@@ -187,6 +187,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\IntValue.cs" />
+    <Compile Include="Types\ExecuteTextureUpdate.cs" />
+    <Compile Include="Types\Int3ToDispatchCount.cs" />
     <Compile Include="Types\CASim.cs" />
     <Compile Include="Types\EdgeOfChaos1.cs" />
     <Compile Include="Types\CCAPanic.cs" />
