Add CA testfield and MouseInput and ModInt

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -187,6 +187,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\InitCATransitionBuffer.cs" />
+    <Compile Include="Types\ModInt.cs" />
+    <Compile Include="Types\MouseInput.cs" />
     <Compile Include="Types\IntValue.cs" />
     <Compile Include="Types\ExecuteTextureUpdate.cs" />
     <Compile Include="Types\Int3ToDispatchCount.cs" />
