--- a/Operators.csproj
+++ b/Operators.csproj
@@ -187,6 +187,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\And.cs" />
     <Compile Include="Types\InitCATransitionBuffer.cs" />
     <Compile Include="Types\ModInt.cs" />
     <Compile Include="Types\MouseInput.cs" />
