--- a/Operators.csproj
+++ b/Operators.csproj
@@ -187,6 +187,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\IntToString.cs" />
+    <Compile Include="Types\MovingAgents01.cs" />
     <Compile Include="Types\And.cs" />
     <Compile Include="Types\InitCATransitionBuffer.cs" />
     <Compile Include="Types\ModInt.cs" />
@@ -195,7 +197,6 @@
     <Compile Include="Types\ExecuteTextureUpdate.cs" />
     <Compile Include="Types\Int3ToDispatchCount.cs" />
     <Compile Include="Types\CASim.cs" />
-    <Compile Include="Types\EdgeOfChaos1.cs" />
     <Compile Include="Types\CCAPanic.cs" />
     <Compile Include="Types\CCATestField.cs" />
     <Compile Include="Types\DOFTestScene.cs" />
