--- a/Operators.csproj
+++ b/Operators.csproj
@@ -187,6 +187,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\Physarum01.cs" />
+    <Compile Include="Types\ActivatePresets.cs" />
     <Compile Include="Types\Round.cs" />
     <Compile Include="Types\IntToString.cs" />
     <Compile Include="Types\MovingAgents01.cs" />
