Testing new StructuredList type

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -187,7 +187,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Types\Physarum01.cs" />
+    <Compile Include="Types\_SpeciesDefinition.cs" />
+    <Compile Include="Types\_MovingAgents02.cs" />
+    <Compile Include="Types\Physarum02.cs" />
     <Compile Include="Types\ActivatePresets.cs" />
     <Compile Include="Types\Round.cs" />
     <Compile Include="Types\IntToString.cs" />
