--- a/Operators.csproj
+++ b/Operators.csproj
@@ -187,6 +187,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\ListToBuffer.cs" />
     <Compile Include="Types\_SpeciesDefinition.cs" />
     <Compile Include="Types\_MovingAgents02.cs" />
     <Compile Include="Types\Physarum02.cs" />
