Updated physarum multi grid simulation

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -187,6 +187,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\SubdivsionRaster.cs" />
+    <Compile Include="Types\ExecRepeatedly.cs" />
     <Compile Include="Types\ListToBuffer.cs" />
     <Compile Include="Types\_SpeciesDefinition.cs" />
     <Compile Include="Types\_MovingAgents02.cs" />
