--- a/Operators.csproj
+++ b/Operators.csproj
@@ -187,6 +187,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\_SimulateBoids.cs" />
+    <Compile Include="Types\_BoidDefinition.cs" />
+    <Compile Include="Types\Boids01.cs" />
     <Compile Include="Types\SubdivsionRaster.cs" />
     <Compile Include="Types\ExecRepeatedly.cs" />
     <Compile Include="Types\ListToBuffer.cs" />
