--- a/Operators.csproj
+++ b/Operators.csproj
@@ -187,6 +187,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\DataList.cs" />
+    <Compile Include="Types\JoinLists.cs" />
     <Compile Include="Types\_SimulateBoids.cs" />
     <Compile Include="Types\_BoidDefinition.cs" />
     <Compile Include="Types\Boids01.cs" />
