--- a/Operators.csproj
+++ b/Operators.csproj
@@ -187,6 +187,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\NormalMap.cs" />
     <Compile Include="Types\DataList.cs" />
     <Compile Include="Types\JoinLists.cs" />
     <Compile Include="Types\_SimulateBoids.cs" />
