--- a/Operators.csproj
+++ b/Operators.csproj
@@ -187,6 +187,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\ParameterViz.cs" />
+    <Compile Include="Types\GetListItemAttribute.cs" />
     <Compile Include="Types\LinePoints.cs" />
     <Compile Include="Types\RepeatAtPoints.cs" />
     <Compile Include="Types\NormalMap.cs" />
