--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Fizzler" version="1.2.0" targetFramework="net471" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net471" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net471" />
   <package id="NAudio" version="1.10.0" targetFramework="net471" />
@@ -11,6 +12,7 @@
   <package id="SharpDX.Direct3D11" version="4.2.0" targetFramework="net472" />
   <package id="SharpDX.DXGI" version="4.2.0" targetFramework="net472" />
   <package id="SharpDX.Mathematics" version="4.2.0" targetFramework="net471" />
+  <package id="Svg" version="3.1.1" targetFramework="net471" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net471" />
   <package id="System.Collections" version="4.3.0" targetFramework="net471" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net471" />
