Added first proof-of-concept for svg-path transition

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -192,6 +192,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\PrepareSlidingLineTransition.cs" />
     <Compile Include="Types\SvgToPoints.cs" />
     <Compile Include="Types\ParameterViz.cs" />
     <Compile Include="Types\GetListItemAttribute.cs" />
