Added Fizzler as asm reference for deployment in build dir

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Fizzler, Version=1.2.0.0, Culture=neutral, PublicKeyToken=4ebff4844e382110">
+      <HintPath>..\..\..\.nuget\packages\fizzler\1.2.0\lib\netstandard1.0\Fizzler.dll</HintPath>
+    </Reference>
     <Reference Include="ManagedBass, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\packages\ManagedBass.3.0.0\lib\net45\ManagedBass.dll</HintPath>
     </Reference>
