Added first version of [ForLoop] and example

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\ForLoopExample.cs" />
+    <Compile Include="Types\ExecuteFloat.cs" />
+    <Compile Include="Types\ForLoop.cs" />
+    <Compile Include="Types\ContextFloat.cs" />
     <Compile Include="Types\PrepareSlidingLineTransition.cs" />
     <Compile Include="Types\SvgToPoints.cs" />
     <Compile Include="Types\ParameterViz.cs" />
