--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\GetIteratedVec3.cs" />
+    <Compile Include="Types\GetIteratedFloat.cs" />
+    <Compile Include="Types\Iterator.cs" />
+    <Compile Include="Types\IterateList.cs" />
+    <Compile Include="Types\SvgLineTransitionExample.cs" />
     <Compile Include="Types\ForLoopExample.cs" />
     <Compile Include="Types\ExecuteFloat.cs" />
     <Compile Include="Types\ForLoop.cs" />
