--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\IterateListExample.cs" />
+    <Compile Include="Types\GetIteration.cs" />
     <Compile Include="Types\GetIteratedVec3.cs" />
     <Compile Include="Types\GetIteratedFloat.cs" />
     <Compile Include="Types\Iterator.cs" />
