--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\UglySSAO.cs" />
+    <Compile Include="Types\_CCAInstancing.cs" />
+    <Compile Include="Types\CCAInstancing.cs" />
     <Compile Include="Types\IterateListExample.cs" />
     <Compile Include="Types\GetIteration.cs" />
     <Compile Include="Types\GetIteratedVec3.cs" />
