--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\ReplicateAtPoints.cs" />
+    <Compile Include="Types\CASim2d.cs" />
+    <Compile Include="Types\ScanHistoryPoints.cs" />
     <Compile Include="Types\UglySSAO.cs" />
     <Compile Include="Types\_CCAInstancing.cs" />
     <Compile Include="Types\CCAInstancing.cs" />
