--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\_ImageFxShaderSetupStatic.cs" />
     <Compile Include="Types\ReplicateAtPoints.cs" />
     <Compile Include="Types\CASim2d.cs" />
     <Compile Include="Types\ScanHistoryPoints.cs" />
