Add [PointLight] with gizmo

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\PointLight.cs" />
     <Compile Include="Types\LoadObjAsMesh.cs" />
     <Compile Include="Types\_ImageFxShaderSetupStatic.cs" />
     <Compile Include="Types\ReplicateAtPoints.cs" />
