First stub for PbrMaterial ops

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\GetPbrParameters.cs" />
+    <Compile Include="Types\SetPrbColors.cs" />
     <Compile Include="Types\PointLight.cs" />
     <Compile Include="Types\LoadObjAsMesh.cs" />
     <Compile Include="Types\_ImageFxShaderSetupStatic.cs" />
