--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,8 +195,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\MeshVerticesToPoints.cs" />
+    <Compile Include="Types\FourPointLights.cs" />
+    <Compile Include="Types\SetMaterial.cs" />
     <Compile Include="Types\GetPbrParameters.cs" />
-    <Compile Include="Types\SetPrbColors.cs" />
     <Compile Include="Types\PointLight.cs" />
     <Compile Include="Types\LoadObjAsMesh.cs" />
     <Compile Include="Types\_ImageFxShaderSetupStatic.cs" />
