Fixed light TBN calculation for rotated instances

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\ScaleVector3.cs" />
     <Compile Include="Types\MeshVerticesToPoints.cs" />
     <Compile Include="Types\FourPointLights.cs" />
     <Compile Include="Types\SetMaterial.cs" />
