--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\PaintExample.cs" />
+    <Compile Include="Types\Paint.cs" />
     <Compile Include="Types\ScaleVector3.cs" />
     <Compile Include="Types\MeshVerticesToPoints.cs" />
     <Compile Include="Types\FourPointLights.cs" />
