Cleaned up TestLab and Dashboard ops and created a bunch of *Example ops

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\SortPixelsWithGlowExample.cs" />
+    <Compile Include="Types\SamplePointAttributesExample.cs" />
+    <Compile Include="Types\BeatDetectionExample.cs" />
+    <Compile Include="Types\HexGridCounterExample.cs" />
+    <Compile Include="Types\ReplicateAtPointExample.cs" />
     <Compile Include="Types\PaintExample.cs" />
     <Compile Include="Types\Paint.cs" />
     <Compile Include="Types\ScaleVector3.cs" />
