--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\PointList.cs" />
     <Compile Include="Types\SortPixelsWithGlowExample.cs" />
     <Compile Include="Types\SamplePointAttributesExample.cs" />
     <Compile Include="Types\BeatDetectionExample.cs" />
