Add RenderMesh and cleaned up some ops

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -196,6 +196,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Types\PointList.cs" />
+    <Compile Include="Types\RenderMesh.cs" />
+    <Compile Include="Types\PartialMain.cs" />
+    <Compile Include="Types\LoadObjAsPoints.cs" />
+    <Compile Include="Types\EmitParticlesAtMeshSliceExample.cs" />
     <Compile Include="Types\SortPixelsWithGlowExample.cs" />
     <Compile Include="Types\SamplePointAttributesExample.cs" />
     <Compile Include="Types\BeatDetectionExample.cs" />
@@ -368,7 +372,6 @@
     <Compile Include="Types\Scene12.cs" />
     <Compile Include="Types\Downsample.cs" />
     <Compile Include="Types\CoC.cs" />
-    <Compile Include="Types\Scene1.cs" />
     <Compile Include="Types\BlendValues.cs" />
     <Compile Include="Types\RandomParticleIndexBuffer.cs" />
     <Compile Include="Types\TextOutlines.cs" />
