Added Texture3d generation op

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\Texture3d.cs" />
     <Compile Include="Types\PointList.cs" />
     <Compile Include="Types\RenderMesh.cs" />
     <Compile Include="Types\PartialMain.cs" />
