Change PickBlendMode op and fixed potential mem leak in RenderTarget

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -215,6 +215,7 @@
     <Compile Include="Types\GetPbrParameters.cs" />
     <Compile Include="Types\PointLight.cs" />
     <Compile Include="Types\LoadObjAsMesh.cs" />
+    <Compile Include="Types\SwitchBlendState.cs" />
     <Compile Include="Types\_ImageFxShaderSetupStatic.cs" />
     <Compile Include="Types\ReplicateAtPoints.cs" />
     <Compile Include="Types\CASim2d.cs" />
