--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\Texture3dComponents.cs" />
+    <Compile Include="Types\ShowTexture3d.cs" />
     <Compile Include="Types\Texture3d.cs" />
     <Compile Include="Types\PointList.cs" />
     <Compile Include="Types\RenderMesh.cs" />
