Some more experiments with beat detection

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\TextFragment.cs" />
+    <Compile Include="Types\DampPeakDecay.cs" />
+    <Compile Include="Types\FloatListLength.cs" />
+    <Compile Include="Types\_AnalyseAudioRange.cs" />
     <Compile Include="Types\Texture3dComponents.cs" />
     <Compile Include="Types\ShowTexture3d.cs" />
     <Compile Include="Types\Texture3d.cs" />
