--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\MaxInt.cs" />
+    <Compile Include="Types\PairPointsForLines.cs" />
+    <Compile Include="Types\FindClosestPointsOnMesh.cs" />
     <Compile Include="Types\TextFragment.cs" />
     <Compile Include="Types\DampPeakDecay.cs" />
     <Compile Include="Types\FloatListLength.cs" />
