--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\OscillateVec3.cs" />
     <Compile Include="Types\MaxInt.cs" />
     <Compile Include="Types\PairPointsForLines.cs" />
     <Compile Include="Types\FindClosestPointsOnMesh.cs" />
