First proof-of-concept for follow-mesh-surface effect

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\FollowMeshSurface.cs" />
     <Compile Include="Types\PickPoints.cs" />
     <Compile Include="Types\OscillateVec3.cs" />
     <Compile Include="Types\MaxInt.cs" />
