--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\SmoothPoints.cs" />
     <Compile Include="Types\RadialGradient.cs" />
     <Compile Include="Types\FollowMeshSurface.cs" />
     <Compile Include="Types\PickPoints.cs" />
