Fix build warnings

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -196,6 +196,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Types\DailyJan30.cs" />
+    <Compile Include="Types\OffsetPoints.cs" />
     <Compile Include="Types\SmoothPoints.cs" />
     <Compile Include="Types\RadialGradient.cs" />
     <Compile Include="Types\FollowMeshSurface.cs" />
