Added render volume op and test noise volume rendering

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\RenderVolumeBox.cs" />
     <Compile Include="Types\DailyJan30.cs" />
     <Compile Include="Types\OffsetPoints.cs" />
     <Compile Include="Types\SmoothPoints.cs" />
