--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,10 +195,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\SamplePoints.cs" />
     <Compile Include="Types\RenderVolumeBox.cs" />
     <Compile Include="Types\DailyJan30.cs" />
     <Compile Include="Types\OffsetPoints.cs" />
-    <Compile Include="Types\SmoothPoints.cs" />
     <Compile Include="Types\RadialGradient.cs" />
     <Compile Include="Types\FollowMeshSurface.cs" />
     <Compile Include="Types\PickPoints.cs" />
