--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\VisibleGizmos.cs" />
+    <Compile Include="Types\SoftTransformPoints.cs" />
     <Compile Include="Types\SamplePoints.cs" />
     <Compile Include="Types\RenderVolumeBox.cs" />
     <Compile Include="Types\DailyJan30.cs" />
@@ -371,7 +373,6 @@
     <Compile Include="Types\GetParticleSystem.cs" />
     <Compile Include="Types\Scene2.cs" />
     <Compile Include="Types\SetParticleSystem.cs" />
-    <Compile Include="Types\GizmoVisibility.cs" />
     <Compile Include="Types\Compare.cs" />
     <Compile Include="Types\CurlNoiseWithGizmo.cs" />
     <Compile Include="Types\CameraSetupTest.cs" />
