Some progress on SoftTransform

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\EulerToAxisAngle.cs" />
     <Compile Include="Types\VisibleGizmos.cs" />
     <Compile Include="Types\SoftTransformPoints.cs" />
     <Compile Include="Types\SamplePoints.cs" />
