--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\_SetAudioAnalysis.cs" />
+    <Compile Include="Types\AudioReaction.cs" />
+    <Compile Include="Types\SetAudioReaction.cs" />
+    <Compile Include="Types\SetContextVariable.cs" />
     <Compile Include="Types\EulerToAxisAngle.cs" />
     <Compile Include="Types\VisibleGizmos.cs" />
     <Compile Include="Types\SoftTransformPoints.cs" />
