Playing to text randomization

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\GetStringPart.cs" />
+    <Compile Include="Types\ScrambleString.cs" />
+    <Compile Include="Types\MockStrings.cs" />
     <Compile Include="Types\_SetAudioAnalysis.cs" />
     <Compile Include="Types\AudioReaction.cs" />
     <Compile Include="Types\SetAudioReaction.cs" />
@@ -213,7 +216,6 @@
     <Compile Include="Types\MaxInt.cs" />
     <Compile Include="Types\PairPointsForLines.cs" />
     <Compile Include="Types\FindClosestPointsOnMesh.cs" />
-    <Compile Include="Types\TextFragment.cs" />
     <Compile Include="Types\DampPeakDecay.cs" />
     <Compile Include="Types\FloatListLength.cs" />
     <Compile Include="Types\_AnalyseAudioRange.cs" />
@@ -536,7 +538,6 @@
     <Compile Include="Types\ScrambleBuffer.cs" />
     <Compile Include="Types\TextGrid.cs" />
     <Compile Include="Types\BufferToString.cs" />
-    <Compile Include="Types\AppendToBuffer.cs" />
     <Compile Include="Types\StringBuilder.cs" />
     <Compile Include="Types\RenderTargetExample.cs" />
     <Compile Include="Types\BloomExample.cs" />
