Fix scaling of bmfonts for varying sdf-texture resolutions

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\OscillateVec2.cs" />
     <Compile Include="Types\GetStringPart.cs" />
     <Compile Include="Types\ScrambleString.cs" />
     <Compile Include="Types\MockStrings.cs" />
