Cleaned up pixtur's dashboard and TestLab into a bunch of example ops

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,16 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\ShadedRibbonsExample.cs" />
+    <Compile Include="Types\RibbonsOnMeshExample.cs" />
+    <Compile Include="Types\AudioReactionGlowExample.cs" />
+    <Compile Include="Types\LineShadingExample.cs" />
+    <Compile Include="Types\FindClosestPointToSurfaceExample.cs" />
+    <Compile Include="Types\PairPointsForLinesExample.cs" />
+    <Compile Include="Types\FollowMeshSurfaceExample.cs" />
+    <Compile Include="Types\SimpleSoundReactionExample.cs" />
+    <Compile Include="Types\CollectSpawnPoints.cs" />
+    <Compile Include="Types\KeepPoints.cs" />
     <Compile Include="Types\OscillateVec2.cs" />
     <Compile Include="Types\GetStringPart.cs" />
     <Compile Include="Types\ScrambleString.cs" />
@@ -323,7 +333,6 @@
     <Compile Include="Types\VariationOverwrite.cs" />
     <Compile Include="Types\DrawRibbons.cs" />
     <Compile Include="Types\ApplyBlend.cs" />
-    <Compile Include="Types\CopyPoints.cs" />
     <Compile Include="Types\Edtaa.cs" />
     <Compile Include="Types\FadingFaces.cs" />
     <Compile Include="Types\FluidFeedback.cs" />
