--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\DustParticles.cs" />
     <Compile Include="Types\WrapPointPosition.cs" />
     <Compile Include="Types\ShadedRibbonsExample.cs" />
     <Compile Include="Types\RibbonsOnMeshExample.cs" />
