--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\ValueChange.cs" />
+    <Compile Include="Types\SyncedNestBalls.cs" />
+    <Compile Include="Types\SyncedRibbons.cs" />
+    <Compile Include="Types\SyncedRandomScroller.cs" />
+    <Compile Include="Types\DrawDrivenSprites.cs" />
+    <Compile Include="Types\RepeatAtGPoints.cs" />
     <Compile Include="Types\DustParticles.cs" />
     <Compile Include="Types\WrapPointPosition.cs" />
     <Compile Include="Types\ShadedRibbonsExample.cs" />
@@ -349,7 +355,6 @@
     <Compile Include="Types\StructuredBuffer2.cs" />
     <Compile Include="Types\SamplePointAttributes.cs" />
     <Compile Include="Types\DrawLinesExample.cs" />
-    <Compile Include="Types\RepeatGPoints.cs" />
     <Compile Include="Types\AddNoise.cs" />
     <Compile Include="Types\ClampInt.cs" />
     <Compile Include="Types\GridGPoints.cs" />
