--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\Not.cs" />
+    <Compile Include="Types\Boolean.cs" />
+    <Compile Include="Types\GrowStrains.cs" />
     <Compile Include="Types\ValueChange.cs" />
     <Compile Include="Types\SyncedNestBalls.cs" />
     <Compile Include="Types\SyncedRibbons.cs" />
