--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\GridWalkPoints.cs" />
     <Compile Include="Types\APoint.cs" />
     <Compile Include="Types\Not.cs" />
     <Compile Include="Types\Boolean.cs" />
