--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\_PhysrumAgents2.cs" />
+    <Compile Include="Types\PartialPhysarum.cs" />
     <Compile Include="Types\GridWalkPoints.cs" />
     <Compile Include="Types\APoint.cs" />
     <Compile Include="Types\Not.cs" />
