Add MeshBuffers to simplify connecting mesh related ops

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\MeshBufferComponents.cs" />
     <Compile Include="Types\_PhysrumAgents2.cs" />
     <Compile Include="Types\PartialPhysarum.cs" />
     <Compile Include="Types\GridWalkPoints.cs" />
