Use MeshBuffer for all Mesh ops and started working on invision invite

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\LoadObj.cs" />
+    <Compile Include="Types\RevisionInvite.cs" />
     <Compile Include="Types\MeshBufferComponents.cs" />
     <Compile Include="Types\_PhysrumAgents2.cs" />
     <Compile Include="Types\PartialPhysarum.cs" />
@@ -267,7 +269,6 @@
     <Compile Include="Types\SetMaterial.cs" />
     <Compile Include="Types\GetPbrParameters.cs" />
     <Compile Include="Types\PointLight.cs" />
-    <Compile Include="Types\LoadObjAsMesh.cs" />
     <Compile Include="Types\SwitchBlendState.cs" />
     <Compile Include="Types\_ImageFxShaderSetupStatic.cs" />
     <Compile Include="Types\ReplicateAtPoints.cs" />
