--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\TorusMesh.cs" />
     <Compile Include="Types\LoadObj.cs" />
     <Compile Include="Types\RevisionInvite.cs" />
     <Compile Include="Types\MeshBufferComponents.cs" />
