--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\PickSDXVector4.cs" />
+    <Compile Include="Types\TransformMatrix.cs" />
+    <Compile Include="Types\TransformPoints.cs" />
     <Compile Include="Types\BoundingSphere.cs" />
     <Compile Include="Types\TorusMesh.cs" />
     <Compile Include="Types\LoadObj.cs" />
