--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\GrowStrainsExample.cs" />
+    <Compile Include="Types\FlashRings.cs" />
+    <Compile Include="Types\RandomizePoints.cs" />
     <Compile Include="Types\PickSDXVector4.cs" />
     <Compile Include="Types\TransformMatrix.cs" />
     <Compile Include="Types\TransformPoints.cs" />
