Add DefineGradient and PulseLaserScene

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\ChannelMixer.cs" />
+    <Compile Include="Types\PulseLaserTest.cs" />
+    <Compile Include="Types\DefineGradient.cs" />
+    <Compile Include="Types\SampleGradient.cs" />
     <Compile Include="Types\GrowStrainsExample.cs" />
     <Compile Include="Types\FlashRings.cs" />
     <Compile Include="Types\RandomizePoints.cs" />
@@ -501,7 +505,6 @@
     <Compile Include="Types\BuildAsciiFontSorting.cs" />
     <Compile Include="Types\AsciiRender.cs" />
     <Compile Include="Types\RaymarchFractal.cs" />
-    <Compile Include="Types\GradientSlider.cs" />
     <Compile Include="Types\ValueSlider.cs" />
     <Compile Include="Types\Daily05_02.cs" />
     <Compile Include="Types\RandomTextBlock.cs" />
