--- a/Operators.csproj
+++ b/Operators.csproj
@@ -196,6 +196,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Types\ChannelMixer.cs" />
+    <Compile Include="Types\MultiUpdatePoints.cs" />
     <Compile Include="Types\PulseLaserTest.cs" />
     <Compile Include="Types\DefineGradient.cs" />
     <Compile Include="Types\SampleGradient.cs" />
