--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\ExecuteBufferUpdate.cs" />
+    <Compile Include="Types\ExecuteRawBufferUpdate.cs" />
     <Compile Include="Types\ChannelMixer.cs" />
     <Compile Include="Types\MultiUpdatePoints.cs" />
     <Compile Include="Types\PulseLaserTest.cs" />
@@ -382,7 +384,6 @@
     <Compile Include="Types\GridGPoints.cs" />
     <Compile Include="Types\AddInts.cs" />
     <Compile Include="Types\RadialGPoints.cs" />
-    <Compile Include="Types\ExecuteSRVUpdate.cs" />
     <Compile Include="Types\DrawLines.cs" />
     <Compile Include="Types\GrainExample.cs" />
     <Compile Include="Types\PointCloudSlicer.cs" />
@@ -390,7 +391,6 @@
     <Compile Include="Types\RadialPoints.cs" />
     <Compile Include="Types\MultiplyInt.cs" />
     <Compile Include="Types\GetSRVProperties.cs" />
-    <Compile Include="Types\ExecuteBufferUpdate.cs" />
     <Compile Include="Types\MixGPoints.cs" />
     <Compile Include="Types\DrawPointsExample.cs" />
     <Compile Include="Types\NoisePoints.cs" />
