Some voxelize and dof changes

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -228,6 +228,8 @@
     <Compile Include="Types\RepeatAtGPoints.cs" />
     <Compile Include="Types\DustParticles.cs" />
     <Compile Include="Types\WrapPointPosition.cs" />
+    <Compile Include="Types\NearFarCoc.cs" />
+    <Compile Include="Types\VoxelizeMesh.cs" />
     <Compile Include="Types\ShadedRibbonsExample.cs" />
     <Compile Include="Types\RibbonsOnMeshExample.cs" />
     <Compile Include="Types\AudioReactionGlowExample.cs" />
