Add [TransformMesh] (and a bunch of helper ops for that) and some progress with Partial physarum/mesh transition

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,13 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\LineGPoints.cs" />
+    <Compile Include="Types\ApplyFollowMeshSurface.cs" />
+    <Compile Include="Types\PartialPhysarum2.cs" />
+    <Compile Include="Types\SnapToPoints.cs" />
+    <Compile Include="Types\CombineMeshBuffers.cs" />
+    <Compile Include="Types\TransformMesh.cs" />
+    <Compile Include="Types\LineCondomExperiment.cs" />
     <Compile Include="Types\ExecuteBufferUpdate.cs" />
     <Compile Include="Types\ExecuteRawBufferUpdate.cs" />
     <Compile Include="Types\ChannelMixer.cs" />
