Some experiments with DrawSprites

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\DrawSpritesExample.cs" />
     <Compile Include="Types\UseRenderTargetExample.cs" />
     <Compile Include="Types\ReplicateAtPointsExample.cs" />
     <Compile Include="Types\BlendWithMaskExample.cs" />
