Properly intialize point trail buffer on size changes

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\DeltaSinceLastFrame.cs" />
+    <Compile Include="Types\HasIntChanged.cs" />
     <Compile Include="Types\DrawSpritesExample.cs" />
     <Compile Include="Types\UseRenderTargetExample.cs" />
     <Compile Include="Types\ReplicateAtPointsExample.cs" />
@@ -234,7 +236,6 @@
     <Compile Include="Types\Not.cs" />
     <Compile Include="Types\Boolean.cs" />
     <Compile Include="Types\GrowStrains.cs" />
-    <Compile Include="Types\ValueChange.cs" />
     <Compile Include="Types\SyncedNestBalls.cs" />
     <Compile Include="Types\SyncedRibbons.cs" />
     <Compile Include="Types\SyncedRandomScroller.cs" />
