Creating TimeClips for partial

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\IntoToWhite.cs" />
     <Compile Include="Types\DeltaSinceLastFrame.cs" />
     <Compile Include="Types\HasIntChanged.cs" />
     <Compile Include="Types\DrawSpritesExample.cs" />
