--- a/Operators.csproj
+++ b/Operators.csproj
@@ -195,6 +195,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\WispsParticles.cs" />
     <Compile Include="Types\DrawLinesBuildup.cs" />
     <Compile Include="Types\WispsForrest1.cs" />
     <Compile Include="Types\IntoToWhite.cs" />
