--- a/packages.config
+++ b/packages.config
@@ -11,7 +11,9 @@
   <package id="SharpDX.Direct2D1" version="4.2.0" targetFramework="net471" />
   <package id="SharpDX.Direct3D11" version="4.2.0" targetFramework="net472" />
   <package id="SharpDX.DXGI" version="4.2.0" targetFramework="net472" />
+  <package id="SharpDX.Direct3D9" version="4.2.0" targetFramework="net471" />
   <package id="SharpDX.Mathematics" version="4.2.0" targetFramework="net471" />
+  <package id="SharpDX.MediaFoundation" version="4.2.0" targetFramework="net471" />
   <package id="Svg" version="3.1.1" targetFramework="net471" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net471" />
   <package id="System.Collections" version="4.3.0" targetFramework="net471" />
