Improve GridWalkPoint and added DrawBillboard

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -204,6 +204,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\DrawQuadsW.cs" />
+    <Compile Include="Types\DrawQuads.cs" />
+    <Compile Include="Types\DrawBillboards.cs" />
     <Compile Include="Types\PairPointsForGridWalkLines.cs" />
     <Compile Include="Types\GridWalkPointsExample.cs" />
     <Compile Include="Types\PlayVideo.cs" />
@@ -255,7 +258,6 @@
     <Compile Include="Types\SyncedNestBalls.cs" />
     <Compile Include="Types\SyncedRibbons.cs" />
     <Compile Include="Types\SyncedRandomScroller.cs" />
-    <Compile Include="Types\DrawDrivenSprites.cs" />
     <Compile Include="Types\RepeatAtGPoints.cs" />
     <Compile Include="Types\DustParticles.cs" />
     <Compile Include="Types\WrapPointPosition.cs" />
@@ -393,7 +395,6 @@
     <Compile Include="Types\ImageLevels.cs" />
     <Compile Include="Types\SortPixelGlitch.cs" />
     <Compile Include="Types\VisualizePoints.cs" />
-    <Compile Include="Types\DrawSprites.cs" />
     <Compile Include="Types\PointsFromMeshData.cs" />
     <Compile Include="Types\VariationOverwrite.cs" />
     <Compile Include="Types\DrawRibbons.cs" />
