LoadObj vertices are now sorted by position

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -204,6 +204,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\PairPointsForGridWalkLinesExample.cs" />
     <Compile Include="Types\DrawQuadsW.cs" />
     <Compile Include="Types\DrawQuads.cs" />
     <Compile Include="Types\DrawBillboards.cs" />
