Started timing of final part with credits

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\CreditText.cs" />
+    <Compile Include="Types\AscendingTogether.cs" />
+    <Compile Include="Types\IntoTheWhiteScene.cs" />
     <Compile Include="Types\PairPointsForGridWalkLinesExample.cs" />
     <Compile Include="Types\DrawQuadsW.cs" />
     <Compile Include="Types\DrawQuads.cs" />
@@ -209,7 +212,6 @@
     <Compile Include="Types\WispsParticles.cs" />
     <Compile Include="Types\DrawLinesBuildup.cs" />
     <Compile Include="Types\WispsForrest1.cs" />
-    <Compile Include="Types\IntoToWhite.cs" />
     <Compile Include="Types\DeltaSinceLastFrame.cs" />
     <Compile Include="Types\HasIntChanged.cs" />
     <Compile Include="Types\DrawSpritesExample.cs" />
