Various detail fixes on Partial; Fixed [PointSampling]; Improved [Locator] rendering; add [CamPosition]

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\CamPosition.cs" />
+    <Compile Include="Types\CameraGizmo.cs" />
     <Compile Include="Types\CreditText.cs" />
     <Compile Include="Types\AscendingTogether.cs" />
     <Compile Include="Types\IntoTheWhiteScene.cs" />
