Started to work on Wake "live" set and tweaked some transitions in partial

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\FadingFacesRev2021.cs" />
+    <Compile Include="Types\RevisionPhotoWall.cs" />
+    <Compile Include="Types\Revision2021.cs" />
     <Compile Include="Types\CamPosition.cs" />
     <Compile Include="Types\CameraGizmo.cs" />
     <Compile Include="Types\CreditText.cs" />
