--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\BlendVector3.cs" />
+    <Compile Include="Types\SoftTransformPointsExample.cs" />
     <Compile Include="Types\FadingFacesRev2021.cs" />
     <Compile Include="Types\RevisionPhotoWall.cs" />
     <Compile Include="Types\Revision2021.cs" />
