--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\RevisionPanic.cs" />
+    <Compile Include="Types\RevisionSoundRev.cs" />
+    <Compile Include="Types\PickFloatList.cs" />
+    <Compile Include="Types\PlaybackFFT.cs" />
+    <Compile Include="Types\RevisionEnds.cs" />
     <Compile Include="Types\BlendVector3.cs" />
     <Compile Include="Types\SoftTransformPointsExample.cs" />
     <Compile Include="Types\FadingFacesRev2021.cs" />
