--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\RevisionPanic.cs" />
     <Compile Include="Types\RevisionSoundRev.cs" />
     <Compile Include="Types\PickFloatList.cs" />
     <Compile Include="Types\PlaybackFFT.cs" />
