Updated revision set

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\RevRibbons.cs" />
+    <Compile Include="Types\OrAll.cs" />
+    <Compile Include="Types\DidTimeRewind.cs" />
     <Compile Include="Types\RevisionPanic.cs" />
     <Compile Include="Types\RevisionSoundRev.cs" />
     <Compile Include="Types\PickFloatList.cs" />
