--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\HammerDulcimer.cs" />
     <Compile Include="Types\RevRibbons.cs" />
     <Compile Include="Types\OrAll.cs" />
     <Compile Include="Types\DidTimeRewind.cs" />
@@ -281,7 +282,6 @@
     <Compile Include="Types\AudioReactionGlowExample.cs" />
     <Compile Include="Types\LineShadingExample.cs" />
     <Compile Include="Types\FindClosestPointToSurfaceExample.cs" />
-    <Compile Include="Types\PairPointsForLinesExample.cs" />
     <Compile Include="Types\FollowMeshSurfaceExample.cs" />
     <Compile Include="Types\SimpleSoundReactionExample.cs" />
     <Compile Include="Types\CollectSpawnPoints.cs" />
