--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\CompareInt.cs" />
+    <Compile Include="Types\__OBSOLETEFollowMeshSurface.cs" />
+    <Compile Include="Types\AColor.cs" />
     <Compile Include="Types\HammerDulcimer.cs" />
     <Compile Include="Types\RevRibbons.cs" />
     <Compile Include="Types\OrAll.cs" />
@@ -302,7 +305,6 @@
     <Compile Include="Types\DailyJan30.cs" />
     <Compile Include="Types\OffsetPoints.cs" />
     <Compile Include="Types\RadialGradient.cs" />
-    <Compile Include="Types\FollowMeshSurface.cs" />
     <Compile Include="Types\PickPoints.cs" />
     <Compile Include="Types\OscillateVec3.cs" />
     <Compile Include="Types\MaxInt.cs" />
