Add first version of sync tiling

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\SynthTiling.cs" />
     <Compile Include="Types\CompareInt.cs" />
     <Compile Include="Types\__OBSOLETEFollowMeshSurface.cs" />
     <Compile Include="Types\AColor.cs" />
