First draft of wake dulcimer into

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\MinInt.cs" />
+    <Compile Include="Types\PickPointList.cs" />
+    <Compile Include="Types\SubdivideLinePoints.cs" />
     <Compile Include="Types\SynthTiling.cs" />
     <Compile Include="Types\CompareInt.cs" />
     <Compile Include="Types\__OBSOLETEFollowMeshSurface.cs" />
