Working on partial intro scene

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\ApplyCentricForce.cs" />
     <Compile Include="Types\MinInt.cs" />
     <Compile Include="Types\PickPointList.cs" />
     <Compile Include="Types\SubdivideLinePoints.cs" />
@@ -425,7 +426,6 @@
     <Compile Include="Types\Or.cs" />
     <Compile Include="Types\SphereGizmo.cs" />
     <Compile Include="Types\AppendPoints.cs" />
-    <Compile Include="Types\ApplyForce.cs" />
     <Compile Include="Types\ApplyNoise.cs" />
     <Compile Include="Types\PointTrail.cs" />
     <Compile Include="Types\GetBufferComponents.cs" />
