--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\ApplyDirectionalForce.cs" />
     <Compile Include="Types\ApplyCentricForce.cs" />
     <Compile Include="Types\MinInt.cs" />
     <Compile Include="Types\PickPointList.cs" />
