--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\CylinderMesh.cs" />
     <Compile Include="Types\DulcimerMain.cs" />
     <Compile Include="Types\PartialCredits.cs" />
     <Compile Include="Types\SamplePointsByCameraDistance.cs" />
