Add WaveForm2 and VectorScope

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,13 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\StreamCountDown.cs" />
+    <Compile Include="Types\CountDown.cs" />
+    <Compile Include="Types\TimeToString.cs" />
+    <Compile Include="Types\DrawScreenQuad.cs" />
+    <Compile Include="Types\WaveForm2.cs" />
+    <Compile Include="Types\D07EditingTest.cs" />
+    <Compile Include="Types\NormalizeVector3.cs" />
     <Compile Include="Types\CylinderMesh.cs" />
     <Compile Include="Types\DulcimerMain.cs" />
     <Compile Include="Types\PartialCredits.cs" />
