--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,13 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\ReflectionLines.cs" />
+    <Compile Include="Types\Sub.cs" />
+    <Compile Include="Types\DrawMesh.cs" />
+    <Compile Include="Types\DrawMeshAtPoints.cs" />
+    <Compile Include="Types\VilualizeTBN.cs" />
+    <Compile Include="Types\PlaneMesh.cs" />
+    <Compile Include="Types\DisplaceMesh.cs" />
     <Compile Include="Types\StreamCountDown.cs" />
     <Compile Include="Types\CountDown.cs" />
     <Compile Include="Types\TimeToString.cs" />
@@ -334,7 +341,6 @@
     <Compile Include="Types\ShowTexture3d.cs" />
     <Compile Include="Types\Texture3d.cs" />
     <Compile Include="Types\PointList.cs" />
-    <Compile Include="Types\RenderMesh.cs" />
     <Compile Include="Types\PartialMain.cs" />
     <Compile Include="Types\LoadObjAsPoints.cs" />
     <Compile Include="Types\EmitParticlesAtMeshSliceExample.cs" />
@@ -353,7 +359,6 @@
     <Compile Include="Types\PointLight.cs" />
     <Compile Include="Types\SwitchBlendState.cs" />
     <Compile Include="Types\_ImageFxShaderSetupStatic.cs" />
-    <Compile Include="Types\ReplicateAtPoints.cs" />
     <Compile Include="Types\CASim2d.cs" />
     <Compile Include="Types\ScanHistoryPoints.cs" />
     <Compile Include="Types\UglySSAO.cs" />
