--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\LazersMain.cs" />
     <Compile Include="Types\ReflectionLines.cs" />
     <Compile Include="Types\Sub.cs" />
     <Compile Include="Types\DrawMesh.cs" />
