--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\PickMeshBuffer.cs" />
+    <Compile Include="Types\DrawRayLines.cs" />
     <Compile Include="Types\ThereLetterBoxOverlay.cs" />
     <Compile Include="Types\LazersMain.cs" />
     <Compile Include="Types\ReflectionLines.cs" />
