Add SelectVertices and TransformMeshUvs

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\TransformMeshUVs.cs" />
+    <Compile Include="Types\QuadMesh.cs" />
+    <Compile Include="Types\Ceil.cs" />
+    <Compile Include="Types\SelectVertices.cs" />
+    <Compile Include="Types\MaryLookDev.cs" />
     <Compile Include="Types\PickMeshBuffer.cs" />
     <Compile Include="Types\DrawRayLines.cs" />
     <Compile Include="Types\ThereLetterBoxOverlay.cs" />
@@ -208,7 +213,6 @@
     <Compile Include="Types\DrawMesh.cs" />
     <Compile Include="Types\DrawMeshAtPoints.cs" />
     <Compile Include="Types\VilualizeTBN.cs" />
-    <Compile Include="Types\PlaneMesh.cs" />
     <Compile Include="Types\DisplaceMesh.cs" />
     <Compile Include="Types\StreamCountDown.cs" />
     <Compile Include="Types\CountDown.cs" />
