Add ClimateWatch proof-of-concept

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\BlendDates.cs" />
+    <Compile Include="Types\ClimateWatch.cs" />
     <Compile Include="Types\TransformMeshUVs.cs" />
     <Compile Include="Types\QuadMesh.cs" />
     <Compile Include="Types\Ceil.cs" />
