--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\CM_StateMachine.cs" />
     <Compile Include="Types\PrefixSum.cs" />
     <Compile Include="Types\DispersePoints.cs" />
     <Compile Include="Types\BlendDates.cs" />
