Add stub for TextureToCubeMap

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\TextureToCubeMap2.cs" />
+    <Compile Include="Types\GetTextureFromContext.cs" />
+    <Compile Include="Types\_SetIBLTexture.cs" />
+    <Compile Include="Types\_SpecularPrefilter.cs" />
+    <Compile Include="Types\SetEnvironmet.cs" />
+    <Compile Include="Types\DateTimeToString.cs" />
     <Compile Include="Types\KeyboardInput.cs" />
     <Compile Include="Types\CM_StateMachine.cs" />
     <Compile Include="Types\PrefixSum.cs" />
