--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\GeometryShaderStage.cs" />
+    <Compile Include="Types\GeometryShader.cs" />
     <Compile Include="Types\TextureToCubeMap2.cs" />
     <Compile Include="Types\GetTextureFromContext.cs" />
     <Compile Include="Types\_SetIBLTexture.cs" />
