Fix prefilter topology

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\PbrExample.cs" />
     <Compile Include="Types\GeometryShaderStage.cs" />
     <Compile Include="Types\GeometryShader.cs" />
     <Compile Include="Types\TextureToCubeMap2.cs" />
