--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,12 +199,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\SetContextTexture.cs" />
     <Compile Include="Types\PbrExample.cs" />
     <Compile Include="Types\GeometryShaderStage.cs" />
     <Compile Include="Types\GeometryShader.cs" />
     <Compile Include="Types\TextureToCubeMap2.cs" />
     <Compile Include="Types\GetTextureFromContext.cs" />
-    <Compile Include="Types\_SetIBLTexture.cs" />
     <Compile Include="Types\_SpecularPrefilter.cs" />
     <Compile Include="Types\SetEnvironmet.cs" />
     <Compile Include="Types\DateTimeToString.cs" />
