Cleaned up some operators while making tutorial videos

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\__ObsoleteKaleidoskope.cs" />
+    <Compile Include="Types\TutorialTitle.cs" />
+    <Compile Include="Types\PointCircleStepTest.cs" />
     <Compile Include="Types\SetContextTexture.cs" />
     <Compile Include="Types\PbrExample.cs" />
     <Compile Include="Types\GeometryShaderStage.cs" />
@@ -697,7 +700,6 @@
     <Compile Include="Types\_multiImageFxSetup.cs" />
     <Compile Include="Types\Damp.cs" />
     <Compile Include="Types\AnimatedKaleidoscope.cs" />
-    <Compile Include="Types\Kaleidoskope.cs" />
     <Compile Include="Types\_ImageFxShaderSetup2.cs" />
     <Compile Include="Types\WaveForm.cs" />
     <Compile Include="Types\SizeToDispatchCount.cs" />
