--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\__RaymarchingFlicker.cs" />
     <Compile Include="Types\__ObsoleteKaleidoskope.cs" />
     <Compile Include="Types\TutorialTitle.cs" />
     <Compile Include="Types\PointCircleStepTest.cs" />
@@ -588,7 +589,6 @@
     <Compile Include="Types\Displace.cs" />
     <Compile Include="Types\OBSOLETE_Displace.cs" />
     <Compile Include="Types\Daily_Mai23.cs" />
-    <Compile Include="Types\RaymarchingFlicker.cs" />
     <Compile Include="Types\StepsExamples.cs" />
     <Compile Include="Types\GradientsToTexture.cs" />
     <Compile Include="Types\Steps.cs" />
