--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\CW_ResourceIcon.cs" />
     <Compile Include="Types\__RaymarchingFlicker.cs" />
     <Compile Include="Types\__ObsoleteKaleidoskope.cs" />
     <Compile Include="Types\TutorialTitle.cs" />
