Added DrawMeshHatched and LoadObjEdges

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\LoadObjEdges.cs" />
+    <Compile Include="Types\DrawMeshHatched.cs" />
     <Compile Include="Types\CW_ResourceIcon.cs" />
     <Compile Include="Types\__RaymarchingFlicker.cs" />
     <Compile Include="Types\__ObsoleteKaleidoskope.cs" />
