--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\ToneMapping.cs" />
+    <Compile Include="Types\LazersMainV2.cs" />
+    <Compile Include="Types\DetectEdges.cs" />
+    <Compile Include="Types\SetCommandTime.cs" />
     <Compile Include="Types\LoadObjEdges.cs" />
     <Compile Include="Types\DrawMeshHatched.cs" />
     <Compile Include="Types\CW_ResourceIcon.cs" />
