--- a/Operators.csproj
+++ b/Operators.csproj
@@ -199,6 +199,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\RoundedRect.cs" />
     <Compile Include="Types\ToneMapping.cs" />
     <Compile Include="Types\LazersMainV2.cs" />
     <Compile Include="Types\DetectEdges.cs" />
