--- a/Operators.csproj
+++ b/Operators.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -210,6 +210,19 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\VisualizeTBN.cs" />
+    <Compile Include="Types\ExtrudeCurves.cs" />
+    <Compile Include="Types\VoronoiCells.cs" />
+    <Compile Include="Types\Test11.cs" />
+    <Compile Include="Types\Test9.cs" />
+    <Compile Include="Types\Test8.cs" />
+    <Compile Include="Types\Test7.cs" />
+    <Compile Include="Types\Test6.cs" />
+    <Compile Include="Types\Test5.cs" />
+    <Compile Include="Types\Test4.cs" />
+    <Compile Include="Types\Test3.cs" />
+    <Compile Include="Types\Test2.cs" />
+    <Compile Include="Types\Test.cs" />
     <Compile Include="Types\RoundedRect.cs" />
     <Compile Include="Types\ToneMapping.cs" />
     <Compile Include="Types\LazersMainV2.cs" />
@@ -250,7 +263,6 @@
     <Compile Include="Types\Sub.cs" />
     <Compile Include="Types\DrawMesh.cs" />
     <Compile Include="Types\DrawMeshAtPoints.cs" />
-    <Compile Include="Types\VilualizeTBN.cs" />
     <Compile Include="Types\DisplaceMesh.cs" />
     <Compile Include="Types\StreamCountDown.cs" />
     <Compile Include="Types\CountDown.cs" />
