--- a/Operators.csproj
+++ b/Operators.csproj
@@ -210,6 +210,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\PointAttributeFromNoise.cs" />
     <Compile Include="Types\Nevoke.cs" />
     <Compile Include="Types\VisualizeTBN.cs" />
     <Compile Include="Types\ExtrudeCurves.cs" />
