--- a/Operators.csproj
+++ b/Operators.csproj
@@ -210,6 +210,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\AlexLineTest.cs" />
     <Compile Include="Types\DrawConnectionLinesExample.cs" />
     <Compile Include="Types\DrawConnectionLines.cs" />
     <Compile Include="Types\PointsOnSphere.cs" />
