Added GlitchDisplace Op

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -210,6 +210,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\PointAttributeFromNoiseExample.cs" />
+    <Compile Include="Types\FirstValidBuffer.cs" />
+    <Compile Include="Types\GlitchDisplace.cs" />
     <Compile Include="Types\PickBuffer.cs" />
     <Compile Include="Types\AlexLineTest.cs" />
     <Compile Include="Types\DrawConnectionLinesExample.cs" />
