--- a/Operators.csproj
+++ b/Operators.csproj
@@ -210,6 +210,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\CubeMesh.cs" />
     <Compile Include="Types\PointAttributeFromNoiseExample.cs" />
     <Compile Include="Types\FirstValidBuffer.cs" />
     <Compile Include="Types\GlitchDisplace.cs" />
