Add [SetCommandTimeExample] to test offsetting context time with [ForLoop]

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -210,7 +210,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\SetCommandTimeExample.cs" />
     <Compile Include="Types\CubeMesh.cs" />
+    <Compile Include="Types\__BlendGradients.cs" />
     <Compile Include="Types\PointAttributeFromNoiseExample.cs" />
     <Compile Include="Types\FirstValidBuffer.cs" />
     <Compile Include="Types\GlitchDisplace.cs" />
