--- a/Operators.csproj
+++ b/Operators.csproj
@@ -210,6 +210,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\ReactionDiffusion.cs" />
     <Compile Include="Types\BlendGradients.cs" />
     <Compile Include="Types\SetCommandTimeExample.cs" />
     <Compile Include="Types\CubeMesh.cs" />
