--- a/Operators.csproj
+++ b/Operators.csproj
@@ -210,6 +210,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\VjFaceSplits.cs" />
+    <Compile Include="Types\MixTapes.cs" />
     <Compile Include="Types\ReactionDiffusion.cs" />
     <Compile Include="Types\BlendGradients.cs" />
     <Compile Include="Types\SetCommandTimeExample.cs" />
