--- a/Operators.csproj
+++ b/Operators.csproj
@@ -210,6 +210,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\SetVJVariables.cs" />
     <Compile Include="Types\VjFaceSplits.cs" />
     <Compile Include="Types\MixTapes.cs" />
     <Compile Include="Types\ReactionDiffusion.cs" />
