Additional VJ-Content for Deadline. Detail Fixes to [Counter], [ValueToRate] and [DrawPoints]

--- a/Operators.csproj
+++ b/Operators.csproj
@@ -210,6 +210,15 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Types\SimulatePoints.cs" />
+    <Compile Include="Types\ApplyForceToPoints.cs" />
+    <Compile Include="Types\HasValueChanged.cs" />
+    <Compile Include="Types\VJDeadlineAnimals.cs" />
+    <Compile Include="Types\VJSpermZoomer.cs" />
+    <Compile Include="Types\VJGlitchRaster.cs" />
+    <Compile Include="Types\RandomString.cs" />
+    <Compile Include="Types\ChromeBleed.cs" />
+    <Compile Include="Types\Deadline2021.cs" />
     <Compile Include="Types\SetVJVariables.cs" />
     <Compile Include="Types\VjFaceSplits.cs" />
     <Compile Include="Types\MixTapes.cs" />
